--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,11 +18,24 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+          cache: "pip"
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@v4
+        with:
+          path: |
+            .venv
+            ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
           
       - name: Verify Poetry Installation
         run: |
