--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,14 +20,29 @@ jobs:
           python-version: "3.13"
           cache: "pip"
 
+      - name: Cache Poetry binary
+        id: cache-poetry
+        uses: actions/cache@v4
+        with:
+          path: ~/.local
+          key: poetry-binary-${{ runner.os }}-1.7.1
+
       - name: Install Poetry
+        if: steps.cache-poetry.outputs.cache-hit != 'true'
         uses: snok/install-poetry@v1
         with:
           version: latest
           virtualenvs-create: true
           virtualenvs-in-project: true
-      
-      - name: Cache Poetry virtualenv
+
+      - name: Verify Poetry Installation
+        if: steps.cache-poetry.outputs.cache-hit != 'true'
+        run: |
+          echo "Poetry version: $(poetry --version)"
+          poetry --version
+
+      - name: Cache virtualenv dependencies
+        id: cache-venv
         uses: actions/cache@v4
         with:
           path: |
@@ -36,13 +51,9 @@ jobs:
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
           restore-keys: |
             ${{ runner.os }}-poetry-
-          
-      - name: Verify Poetry Installation
-        run: |
-          echo "Poetry version: $(poetry --version)"
-          poetry --version
 
       - name: Install dependencies
+        if: steps.cache-venv.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
 
       - name: Check formatting
