--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Code Quality Checks and Tests
+name: Code Quality Checks
 
 on:
   push:
@@ -9,60 +9,24 @@ on:
       - '*'
 
 jobs:
-  code-quality:
+  format-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-          cache: "pip"
-
-      - name: Cache Poetry binary
-        id: cache-poetry
-        uses: actions/cache@v4
-        with:
-          path: ~/.local
-          key: poetry-binary-${{ runner.os }}-1.7.1
-
-      - name: Install Poetry
-        if: steps.cache-poetry.outputs.cache-hit != 'true'
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-
-      - name: Verify Poetry Installation
-        if: steps.cache-poetry.outputs.cache-hit != 'true'
-        run: |
-          echo "Poetry version: $(poetry --version)"
-          poetry --version
-
-      - name: Cache virtualenv dependencies
-        id: cache-venv
-        uses: actions/cache@v4
-        with:
-          path: |
-            .venv
-            ~/.cache/pypoetry
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
-
-      - name: Install dependencies
-        if: steps.cache-venv.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
-
+      - uses: ./.github/actions/setup-python-poetry
       - name: Check formatting
         run: make format-check
-        
-      - name: Run linting
-        if: success() || failure()  # Run even if format-check fails
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-python-poetry
+      - name: Check linting
         run: make lint
-      
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-python-poetry
       - name: Run tests
-        if: success() || failure()  # Run even if linting fails
         run: make test
