chore: bump version to `v0.1.0-preview`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
 
   intent-gate:
     build: .
-    image: intent-gate:v0.1.0-rc
+    image: intent-gate:v0.1.0-preview
     restart: on-failure
     ports:
       - '8080:8080'
