--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ packages = [{include = "app"}]
 black = "^25.1.0"
 flake8 = "^7.2.0"
 flake8-pyproject = "^1.2.3"
+httpx = "^0.28.1"
 isort = "^6.0.1"
 mypy = "^1.16.0"
 pylint = "^3.3.7"
