chore(prom): add prometheus collector #30

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,22 @@ services:
       - AUTOHEAL_DEFAULT_STOP_TIMEOUT=10
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    configs:
+      - source: prometheus_config
+        target: /etc/prometheus/prometheus.yml
+    ports:
+      - "8081:9090"
+
+configs:
+  prometheus_config:
+    content: |
+      global:
+        scrape_interval: 15s
+      scrape_configs:
+        - job_name: 'intent-gate'
+          static_configs:
+            - targets: ['intent-gate:8080']
