--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ license = {text = "MIT"}
 name = "intent-gate"
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
-version = "0.1.0"
+version = "0.1.0-preview.1"
 
 [tool.black]
 line-length = 99
