feat(quoter): add TTL cache for rfqs rev search #34
closes: #34

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ authors = [
   {email = "kirill@ongrid.pro", name = "Kirill Varlamov"}
 ]
 dependencies = [
+  "cachetools (>=6.1.0,<7.0.0)",
   "fastapi (>=0.115.12,<0.116.0)",
   "networkx (>=3.5,<4.0)",
   "prometheus-client (>=0.22.1,<0.23.0)",
   "requests (>=2.32.4,<3.0.0)",
+  "types-cachetools (>=6.1.0.20250717,<7.0.0.0)",
   "uvicorn (>=0.34.3,<0.35.0)",
   "web3[async] (>=7.12.0,<8.0.0)"
 ]
